// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteFooter renders correctly with no social links 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c4 {
  color: #a0a0b0;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  border-top: 1px solid rgba(255, 255, 255, 0.08);
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.c3 {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3"
      >
        <div
          class="carbonbadge  wcb-d "
          id="wcb"
        />
      </div>
      <p
        class="c4"
        style="text-align: center;"
        variant="small"
      >
        © 
        2026
         
        Andrea Agostini
      </p>
    </section>
  </footer>
</div>
`;

exports[`SiteFooter renders correctly with social links 1`] = `
.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
}

.c3 {
  color: #3b82f6;
  text-decoration: none;
  font-size: 1rem;
  line-height: 1;
  transition: color 0.2s ease-in-out;
}

.c3:hover {
  color: #3b82f6;
}

.c3:focus-visible {
  outline: 2px solid #3b82f6;
  outline-offset: 2px;
}

.c6 {
  color: #a0a0b0;
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c0 {
  border-top: 1px solid rgba(255, 255, 255, 0.08);
  padding-top: 2rem;
  padding-bottom: 2rem;
}

.c4 {
  font-weight: 700;
  color: #3b82f6;
}

.c5 {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

<div>
  <footer
    class="c0"
    role="contentinfo"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          aria-label="LinkedIn"
          class="c3 c4"
          href="https://linkedin.com/in/agostiniandrea"
          rel="noopener noreferrer"
          target="_blank"
        >
          LinkedIn
        </a>
        <a
          aria-label="GitHub"
          class="c3 c4"
          href="https://github.com/agostiniandrea"
          rel="noopener noreferrer"
          target="_blank"
        >
          GitHub
        </a>
      </div>
      <div
        class="c5"
      >
        <div
          class="carbonbadge  wcb-d "
          id="wcb"
        />
      </div>
      <p
        class="c6"
        style="text-align: center;"
        variant="small"
      >
        © 
        2026
         
        Andrea Agostini
      </p>
    </section>
  </footer>
</div>
`;
